HOMEPAGE: fixed slider to wrap scroll

--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -34,19 +34,19 @@
 		  		overflow: hidden;
 		  		height: 680px;
 
-		  		&:nth-child(1) {
+		  		&.case-1 {
 		  			background:  #363232;
 		  			.case-button a:hover {
 		  				color: #363232;
 		  			}
 		  		}
-		  		&:nth-child(2) {
+		  		&.case-2 {
 		  			background:  #5D6976;
 		  			.case-button a:hover {
 		  				color: #5D6976;
 		  			}
 		  		}
-		  		&:nth-child(3) {
+		  		&.case-3 {
 		  			background:  #213B47;
 		  			.case-button a:hover {
 		  				color: #213B47;
